resources/css/style.css
.headline {
  font-family: 'Abril Fatface', cursive;
  color: rgba(20,20,20,0.8);
  margin-top:6rem;
}

.float-right {
  float: right;
}

.float-left {
  float: left;
}

label {
  margin: none;
}

.alphabet-picker {
  display: inline;
  margin-top: 0.5rem;
  display: flex;
  height: 60px;
  width: 200px;
  align-items: center;
  border: 1px solid rgba(30, 30, 120, 0.2);
}

.alphabet-picker img {
  height: 40px;
  width: auto;
  border: 1px solid white;
  cursor: pointer;
  transition: border 0.5s;
}

.radio-letter {
  display:none;
}

.alphabet-picker input:checked + label {
  border: 1px solid blue;
}

#big-letter {
  height: 30rem;
  width: 30rem;
  margin-left: 10rem;
  margin-top: 5rem;
  background-image: url('../images/a.jpg');
  background-size: cover;
  background-position: center;
  border: 1px solid rgba(30, 30, 30, 0.6);
}
/* #a-letter */

